--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Fri Nov  9 17:51:09 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* emit-rtl.c (set_mem_attributes): Get alignments for constants.
+
 2001-11-09  Aldy Hernandez  <aldyh@redhat.com>
 
         * rs6000.h (REG_CLASS_CONTENTS): Add VRSAVE bit to ALL_REGS.
