* config/stormy16/stormy16.c (xstormy16_expand_casesi): 	Don't change INDEX.
In testsuite/:

	* gcc.c-torture/execute/20011109-1.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46899 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-09  Geoffrey Keating  <geoffk@redhat.com>
+
+	* config/stormy16/stormy16.c (xstormy16_expand_casesi): 
+	Don't change INDEX.
+
 Fri Nov  9 17:51:09 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 	* alias.c (nonoverlapping_memrefs_p): New function.
