* flow.c (insn_dead_p): Allow for AUTO_INC notes all the time.
In testsuite/:

	* gcc.c-torture/execute/20011109-2.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46901 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2001-11-09  Geoffrey Keating  <geoffk@redhat.com>
 
+	* flow.c (insn_dead_p): Allow for AUTO_INC notes all the time.
+
 	* config/stormy16/stormy16.h (ASM_SPEC): Revert last change,
 	don't pass --gdwarf2 to the assembler if the compiler will also
 	provide debug info.
