* tree.h (TYPE_VOLATILE): Trap use not on TYPEs. 	(TYPE_READONLY): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46902 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2001-11-09  Geoffrey Keating  <geoffk@redhat.com>
 
+	* tree.h (TYPE_VOLATILE): Trap use not on TYPEs.
+	(TYPE_READONLY): Likewise.
+
 	* flow.c (insn_dead_p): Allow for AUTO_INC notes all the time.
 
 	* config/stormy16/stormy16.h (ASM_SPEC): Revert last change,
