* class.c (dump_array): Fix format specifier warning.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46903 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-09  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* class.c (dump_array): Fix format specifier warning.
+
 2001-11-09  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* cp-lang.c (LANG_HOOKS_NAME): Override.
