--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-11-09  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* clipper.h (ASM_OUTPUT_REG_POP): Fix typo.
+
+	* tlink.c (recompile_files): Copy strings passed to `putenv'.
+
 2001-11-09  Geoffrey Keating  <geoffk@redhat.com>
 
 	* tree.h (TYPE_VOLATILE): Trap use not on TYPEs.
