* Makefile.in: Update. 	* c-decl.c (print_lang_decl, print_lang_type): Remove. 	(print_lang_identifier): Rename c_print_identifier. 	* c-lang.c (LANG_HOOKS_PRINT_IDENTIFIER, LANG_HOOKS_SET_YYDEBUG): New. 	(print_lang_statistics, lang_print_xnode): Remove. 	* c-parse.in (set_yydebug): Rename c_set_yydebug. 	* c-tree.h (c_set_yydebug, c_print_identifier): New. 	* langhooks-def.h (lhd_print_tree_nothing, lhd_set_yydebug): New. 	LANG_HOOKS_PRINT_STATISTICS, LANG_HOOKS_PRINT_XNODE, 	LANG_HOOKS_PRINT_DECL, LANG_HOOKS_PRINT_TYPE, 	LANG_HOOKS_PRINT_IDENTIFIER, LANG_HOOKS_SET_YYDEBUG): New. 	(LANG_HOOKS_INITIALIZER): Update. 	* langhooks.h (struct lang_hooks): New members. 	(lang_print_tree_hook): New. 	* langhooks.c (lhd_print_tree_nothing, lhd_set_yydebug): New. 	* print-tree.c: Include langhooks.h. 	(print_node): Update. 	* toplev.c (decode_d_option): Update. 	* tree.c: Include langhooks.h. 	(dump_tree_statistics): Update. 	* tree.h (print_lang_statistics, print_lang_decl, print_lang_type, 	print_lang_identifier, set_yydebug, lang_print_xnode): Remove. ada: 	* misc.c (gnat_print_decl, gnat_print_type): Renamed. 	(LANG_HOOKS_PRINT_DECL, LANG_HOOKS_PRINT_TYPE): Override. 	(print_lang_statistics, lang_print_xnode, print_lang_identifier, 	set_yydebug): Remove. cp: 	* cp-lang.c (LANG_HOOKS_PRINT_DECL, LANG_HOOKS_PRINT_TYPE, 	LANG_HOOKS_PRINT_STATISTICS, LANG_HOOKS_PRINT_XNODE, 	LANG_HOOKS_PRINT_IDENTIFIER, LANG_HOOKS_SET_YYDEBUG): Override. 	* cp-tree.h (print_class_statistics): Remove. 	(cxx_print_statistics, cxx_print_xnode, cxx_print_decl, cxx_print_type, 	cxx_print_identifier, cxx_set_yydebug): New. 	* lex.c (set_yydebug): Rename c_set_yydebug. 	* ptree.c (print_lang_decl, print_lang_type, print_lang_identifier, 	lang_print_xnode): Rename. 	* tree.c (print_lang_statistics): Rename. f: 	* com.c (ffe_print_identifier): Rename. 	(LANG_HOOKS_PRINT_IDENTIFIER): Override. 	(lang_print_xnode, print_lang_decl, print_lang_statistics, 	print_lang_type, set_yydebug): Remove. java: 	*

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,5 +1,12 @@
 2001-11-09  Neil Booth  <neil@daikokuya.demon.co.uk>
 
+	* misc.c (gnat_print_decl, gnat_print_type): Renamed.
+	(LANG_HOOKS_PRINT_DECL, LANG_HOOKS_PRINT_TYPE): Override.
+	(print_lang_statistics, lang_print_xnode, print_lang_identifier,
+	set_yydebug): Remove.
+
+2001-11-09  Neil Booth  <neil@daikokuya.demon.co.uk>
+
 	* misc.c (LANG_HOOKS_NAME, LANG_HOOKS_IDENTIFIER_SIZE): Override.
 	(struct lang_hooks): Constify.
 	(language_string, lang_identify): Remove.
