--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-11-09  Richard Henderson  <rth@redhat.com>
+
+	* config/alpha/alpha.c (decl_in_text_section): New.
+	(current_file_function_operand): Use it.
+	(alpha_encode_section_info, alpha_end_function): Likewise.
+
 2001-11-07  David O'Brien  <obrien@FreeBSD.org>
 
 	* config.gcc: Add FreeBSD/IA-64 target. Expand config/i64/elf.h headers.
