--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2001-11-09  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* config.gcc (i[34567]86-dg-dgux*): Don't set `out_file'.
+
+	* i386/dgux.h (ASM_FILE_START): Set to the meaningful portions
+	of dgux.c:output_file_start().
+
+	* i386/dgux.c: Delete file.
+
 2001-11-09  Richard Henderson  <rth@redhat.com>
 
 	* config/alpha/alpha.c (decl_in_text_section): New.
