* tradcif.y (parse_number): Use TOLOWER/ISXDIGIT/hex_value/hex_p.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46913 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -3,6 +3,7 @@
 	* cppexp.c (parse_number): Use ISXDIGIT/hex_value.
 	* cpplex.c (hex_digit_value): Use hex_p/hex_value.
 	* cppmain.c (general_init): Call hex_init.
+	* tradcif.y (parse_number): Use TOLOWER/ISXDIGIT/hex_value/hex_p.
 
 	* config.gcc (i[34567]86-dg-dgux*): Don't set `out_file'.
 
