* alias.c (nonoverlapping_memrefs_p): Not overlapping if one base is 	constant and one is on frame. 	If know memref offset, adjust size from decl.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46925 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Sun Nov 11 05:56:01 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* alias.c (nonoverlapping_memrefs_p): Not overlapping if one base is
+	constant and one is on frame.
+	If know memref offset, adjust size from decl.
+
 2001-11-11  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* alpha/unicosmk.h (ASM_OUTPUT_DOUBLE, ASM_OUTPUT_FLOAT): Fix
