--- a/gcc/ChangeLog.5
+++ b/gcc/ChangeLog.5
@@ -2325,7 +2325,7 @@ Sat Jun  2 12:23:51 CEST 2001  Jan Hubicka  <jh@suse.cz>
 	(and?i splitters): Use ext_register_operands.
 	(test?i peep2): Remove ignored constraints.
 	* i386.c (ext_register_operand): Check that operand is
-	eighter pseudo or hard or 'Q' register.
+	either pseudo or hard or 'Q' register.
 
 Sat Jun  2 06:53:50 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
@@ -3324,7 +3324,7 @@ Sat May 19 09:40:45 2001  Denis Chertykov  <denisc@overta.ru>
 Fri May 18 22:42:04 CEST 2001  Jan Hubicka  <jh@suse.cz>
 
 	* combine.c (combine_simplify_rtx): Clear op0_mode if simplification
-	suceeded.
+	succeeded.
 
 Fri May 18 07:26:34 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
@@ -10383,7 +10383,7 @@ Wed Feb 14 10:08:26 CET 2001  Jan Hubicka  <jh@suse.cz>
 	    DJ Delorie  <dj@redhat.com>
 
 	* jump.c (jump_optimize_1): When we delete a conditional jump
-	preceeding a non-conditional jump to effectively the same place,
+	preceding a non-conditional jump to effectively the same place,
 	make sure that the combined jump skips any clobber insns between
 	the two labels.
 
@@ -12771,7 +12771,7 @@ Fri Jan 12 00:04:00 MET 2001  Jan Hubicka  <jh@suse.cz>
 	* i386.c (ix86_comparison_operator, fcmov_comparison_operator,
 	put_condition_code): Convert fp comparison codes to integer
 	before handling.
-	(ix86_expand_fp_compare): Postnote the fp comparison code converison
+	(ix86_expand_fp_compare): Postnote the fp comparison code conversion
 	to final.
 
 	* i386.c (unsigned_comparison, no_comparison_operator): Kill.
