--- a/gcc/ChangeLog.2
+++ b/gcc/ChangeLog.2
@@ -9963,7 +9963,7 @@ Thu Aug 26 19:33:23 1999  Jim Wilson  <wilson@cygnus.com>
 	* dwarf2out.c (DWARF2_ASM_LINE_DEBUG_INFO): Add default definition.
 	(debug_dwarf): Add DWARF2_ASM_LINE_DEBUG_INFO support.
 	(dwarf2out_line, dwarf2out_finish): Likewise.
-	* tm.texi (DWARF2_ASM_LINE_DEBUG_INFO): Add documetation.
+	* tm.texi (DWARF2_ASM_LINE_DEBUG_INFO): Add documentation.
 
 Thu Aug 26 16:10:56 1999  Gavin Romig-Koch  <gavin@cygnus.com>
 
@@ -12356,7 +12356,7 @@ Mon Jul 26 22:52:47 1999  Richard Henderson  <rth@cygnus.com>
 	* i960.h (BUILD_VA_LIST_TYPE): New.
 	(EXPAND_BUILTIN_VA_START): New.
 	(EXPAND_BUILTIN_VA_ARG): New.
-	* i960.md (store_multiple): Use change_address on individul mems.
+	* i960.md (store_multiple): Use change_address on individual mems.
 
 Mon Jul 26 22:43:12 1999  Richard Henderson  <rth@cygnus.com>
 
