* config/h8300/h8300.c (shift_alg): Remove SHIFT_MAX. 	(get_shift_alg): Remove redundant code.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46931 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2001-11-11  Kazu Hirata  <kazu@hxi.com>
 
+	* config/h8300/h8300.c (shift_alg): Remove SHIFT_MAX.
+	(get_shift_alg): Remove redundant code.
+
+2001-11-11  Kazu Hirata  <kazu@hxi.com>
+
 	* config/pa/milli64.S: Fix comment formatting.
 	* config/pa/pa-64.h: Likewise.
 	* config/pa/pa-linux.h: Likewise.
